@@ -1,5 +1,8 @@
 2005-09-14  Martin Hunt  <hunt@redhat.com>
 
+	* map.c (_stp_map_clear): New function. CLears a map but
+	does not free it.
+
 	* copy.c (__stp_strncpy_from_user): Add ppc64 support.
 	(_stp_strncpy_from_user): Call access_ok().
 	(_stp_string_from_user): Ditto.
